--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"@stripe/stripe-js": "^7.9.0",
 		"axios": "^1.12.2",
+		"contentful": "^11.10.1",
 		"dotenv-json": "^1.0.0",
 		"lodash": "^4.17.21"
 	}
