--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"svelte": "^5.25.0",
 		"tailwindcss": "^4.0.0",
+		"tailwindcss-motion": "^1.1.1",
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
